// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/filter/utils/arrPush.ts fn 1`] = `
Array [
  "1",
  "2",
  "2",
]
`;

exports[`utils/filter/utils/arrPush.ts fn 2`] = `
Array [
  "2",
  "3",
  "4",
  "1",
  "2",
  "3",
]
`;
